Fix z-index issue with menu.

--- a/html/css/cssvariables.css
+++ b/html/css/cssvariables.css
@@ -12,5 +12,5 @@
    --third-text-color: #666;
    --third-highlight-color: #333; /* Swap these? */
 
-   --topbar-height: 40px;
+   --topbar-height: 45px;
 }
